[package]
name = "pgdump_filter"
version = "0.1.0"
authors = ["Alexander Van Hecke"]
description = "CLI for filtering postgres dumps"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
lazy_static = "1.4.0"